<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="app_name">Video Live Wallpaper</string>
    <string name="wallpaperdescription">Set a video as a live wallpaper</string>
    <string name="prefs_prefcat">Live Wallpaper Preferences</string>
    <string name="donate_pref">Donate</string>
    <string name="donate_prefdesc">support the author if you like this live wallpaper</string>
    <string name="donate_prefdialog">Thank you for considering donating! Would you like to be taken to the web site for donations?</string>
    <string name="pick_a_file_title">Pick A File Or Directory</string>
    <string name="pref_title">Video Live Wallpaper Preferences</string>
    <string name="pick_a_file_pref">Video file or directory</string>
    <string name="pick_a_file_no_prefdesc">no video file or directory selected yet</string>
    <string name="pick_a_file_warning_dialog_title">Warning</string>
    <string name="pick_a_file_warning_dialog">It is not recommended to select a folder with a lot of files. Continue anyway?</string>
    <string name="recursive_dir_pref">Recursive directory</string>
    <string name="recursive_dir_prefdesc">also include all subdirectories of the selected directory</string>
    <string name="random_file_mode_pref">Random file</string>
    <string name="random_file_mode_prefdesc">play files in random order rather than in succession</string>
    <string name="playing_mode_pref">Swiping smoothness</string>
    <string name="playing_mode_prefdesc">select what you prefer smoother when interacting with home screens</string>
    <string name="playing_mode_working_thread_prefitem">Smoother swiping animiation</string>
    <string name="playing_mode_delayed_runnable_prefitem">Smoother video</string>
    <string name="zooming_mode_pref">Rendering mode</string>
    <string name="zooming_mode_prefdesc">select drawing mode. Select between classic, letterboxed and stretched</string>
    <string name="zooming_mode_classic_prefitem">Classic (swipes)</string>
    <string name="zooming_mode_letterboxed_prefitem">Letterboxed</string>
    <string name="zooming_mode_stretched_prefitem">Stretched</string>
    <string name="do_not_skip_pref">Do not skip frames</string>
    <string name="do_not_skip_prefdesc">"prevent frame skipping if the video's FPS is too high"</string>
    <string name="shift_video_pref">Shift video</string>
    <string name="shift_video_prefdesc">shift video when swiping between home screens</string>
    <string name="swiping_lag_pref">Swiping lag</string>
    <string name="swiping_lag_prefdesc">set how quickly video follows swiping</string>
    <string name="debug_mode_pref">Debug mode</string>
    <string name="debug_mode_prefdesc">shows FPS and a lot of info in the logcat. Keep disabled!</string>
    <string name="swiping_lag_1_prefitem">Instant</string>
    <string name="swiping_lag_2_prefitem">Fast</string>
    <string name="swiping_lag_3_prefitem">Normal</string>
    <string name="swiping_lag_4_prefitem">Slower</string>
    <string name="swiping_lag_5_prefitem">Slow</string>
    <string name="help_about_prefcat">Help &amp; About</string>
    <string name="eula_pref">End-user License Agreement</string>
    <string name="eula_agree_choice">I agree</string>
    <string name="eula_disagree_choice">I disagree</string>
    <string name="help_pref">Help</string>
    <string name="help_prefdesc">info about these preferences, supported videos and how to create them</string>
    <string name="changelog_pref">Changelog</string>
    <string name="changelog_prefdesc">"show app's changes over time"</string>
    <string name="about_pref">About</string>
    <string name="about_prefdesc">about this live wallpaper</string>
</resources>
